# ur5_sim

./: .gitignore  Dockerfile  LICENSE  README.md  clone_ur_kin.sh  docker-compose.yml
docker/: copilot_entrypoint.sh  entrypoint.sh  llm_entrypoint.sh  motion_demo_entrypoint.sh  motion_server_entrypoint.sh  sine_demo_entrypoint.sh
ros_ws/src/ur5_ros_gazebo/: CMakeLists.txt  package.xml
ros_ws/src/ur5_ros_gazebo/include/ur5_ros_gazebo/: motion_library.hpp
ros_ws/src/ur5_ros_gazebo/launch/: ur5_motion_demo.launch  ur5_sine_demo.launch
ros_ws/src/ur5_ros_gazebo/src/: kdl_ik.cpp  motion_library.cpp  motion_node.cpp  sine_joint_publisher.cpp
ur5_ros_gazebo/: CMakeLists.txt
ur5_ros_gazebo/action/: MoveJoint.action  MoveLinear.action
ur5_ros_gazebo/include/ur5_ros_gazebo/: kdl_ik.hpp  motion_library.hpp  traj_utils.hpp
ur5_ros_gazebo/launch/: ur5_sine_demo.launch
ur5_ros_gazebo/src/: motion_action_server.cpp  traj_utils.cpp
ur_motion_api/: CMakeLists.txt  package.xml
ur_motion_api/launch/: ur_motion_api.launch
ws/: ur5_sim
ws/src/ur5_ros_gazebo/: CMakeLists.txt  package.xml
ws/src/ur5_ros_gazebo/action/: MoveLinear.action
ws/src/ur5_ros_gazebo/include/ur5_ros_gazebo/: motion_library.hpp
ws/src/ur5_ros_gazebo/launch/: ur5_motion_demo.launch
ws/src/ur5_ros_gazebo/src/: motion_action_server.cpp  motion_library.cpp  motion_node.cpp  sine_joint_action_client.cpp
ws/src/ur5_ros_gazebo/tests/: motion_action_server.test  motion_library.test  test_motion_action_server.cpp  test_motion_library.cpp
ws/src/ur_motion_api/: CMakeLists.txt
ws/src/ur_motion_api/launch/: ur_motion_api.launch
ws/src/ur_motion_api/scripts/: llm.py  llm_copilot.py  motion_api.py
ws/src/ur_motion_api/tests/: motion_api.tests  test_motion_api.py
